ganv (1.5.2) unstable;

  * Fix positioning of embedded widgets when changing layout.
  * Fix unexpected node jumping when dragging new connections.
  * Preserve selection for quickly making several connections.
  * Dampen sprung layout energy over time to prevent oscillation.
  * Distinguish edge color from port color slighly.
  * Add support for PDF and PS export.
  * Improve text rendering at high zoom.
  * Improve appearance of graphs with circle nodes.
  * Improve update performance.
  * Add API to specify module port order.
  * Fix various minor visual alignment/sizing issues.
  * Fix size of vertical flow modules.
  * Fix compilation with --no-fdgl (patch from Vlad Glagolev).
  * Fix crash when destroying canvas.

 -- David Robillard <d@drobilla.net>  Sat, 21 Feb 2015 19:39:35 -0500

ganv (1.4.2) stable;

  * Fix bug where edges would not update when nodes are moved after the canvas
    is cleared (fix stuck connections in Patchage after refresh).
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:24:33 -0400

ganv (1.4.0) stable;

  * Begin using library and pkg-config names suitable for parallel
    installation.  This version of flowcanvas is flowcanvas-1 and is
    NOT compatible with previous versions
  * Clean up API and improve documentation.
  * Add font size API
  * Use system theme font size by default
  * Size empty ports in font based units so they look right when zoomed
  * Adjust padding and placement to precisely fit text
  * Add ability to select connections directly
  * Add Connection::set_curved()
  * Fix lingering handle when deleting connections
  * Dramatically increase performance by rendering text manually
    rather than using the truly awful Gnome::Canvas::Text.
  * Remove use of boost smart pointers.  Adding and removing from containers
    (e.g. Canvas, Module) is now done automatically.
  * Clean up API/ABI by hiding private implementations.